--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,12 @@ src_managed/
 project/boot/
 project/plugins/project/
 
+
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
 
 # self ignore
 *.swp
+.idea
+project/target/
